2007-10-26  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, regex pattern for IP addresses passed over .al, .cl, .gl, .il, .ml, .nl, .pl, .sl.

2007-10-24  Satoshi Nakagawa <artension@gmail.com>

	Changed to allow lossy encoding conversions.

2007-10-24  Satoshi Nakagawa <artension@gmail.com>

	Changed to run GC after 10 minutes idle.
	Fixed a bug, a scrollback mark in the head of log should be erased when the number of log lines gets greater than threshold.

2007-10-24  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, sheet windows should be closed in sheetDidEnd_returnCode_contextInfo.

2007-10-19  Satoshi Nakagawa <artension@gmail.com>

	Changed to enable nick click menu on server logs.

2007-10-08  Satoshi Nakagawa <artension@gmail.com>

	Added transcript tab on the preference dialog.

2007-10-04  Satoshi Nakagawa <artension@gmail.com>

	Changed to use sort_by.

2007-10-03  Satoshi Nakagawa <artension@gmail.com>

	Added a build target to bundling RubyCocoa.framework.
	A patch from Eloy Duran.

2007-09-30  Satoshi Nakagawa <artension@gmail.com>

	Replaced #length to #size for NSString, NSArray and NSDictionary.

2007-09-30  Satoshi Nakagawa <artension@gmail.com>

	Assigned ctrl+enter to send Notice message.
	Added a menu item to show paste dialog.

2007-09-30  Satoshi Nakagawa <artension@gmail.com>

	Changed to hide channel passwords in title bar of the main window.

2007-09-27  Satoshi Nakagawa <artension@gmail.com>

	Changed the default settings for tab key to nick completion on non-Japanese environment.

2007-09-24  Satoshi Nakagawa <artension@gmail.com>

	Released 0.10.
	Added scripts to automate release build.

2007-09-24  Satoshi Nakagawa <artension@gmail.com>

	Changed sort order of the nick list to myself, op, non-op.

2007-09-22  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, unread and keyword state were not working.

2007-09-22  Satoshi Nakagawa <artension@gmail.com>

	Changed to push text in the input buffer on moving channels.
