@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{721, 44}, {909, 984}}</string>
+	<string>{{721, 46}, {909, 984}}</string>
 </dict>
 </plist>
